ros2_ws/log/build_2025-07-07_19-01-03/serial_robot/stderr.log
  File "/home/robot/ros2_ws/install/serial_robot/lib/python3.12/site-packages/serial_robot/communication_serial.py", line 91
    baudrate=self.baud_rate_,/home/robot/ros2_ws/src/serial_robot/serial_robot/communication_serial.py
                             ^
SyntaxError: invalid syntax

